--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+img{
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landing {
+  position: relative;
+  background: url('./img/showcase.jpeg') no-repeat;
+  background-size: cover;
+  height: 100vh;
+  margin-top: -24px;
+  margin-bottom:-50px;
+}
+.landing-inner {
+  padding-top: 80px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dark-overly {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 100%;
+  width: 10%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card-form {
+  opacity: 0.9;
 }
-
-.App-link {
-  color: #61dafb;
+.latest-profiles-img{
+  width: 40px;
+  height: 40px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control::placeholder {
+  color: #bbb !important;
 }
