Landing and Footer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,26 @@
 img{
   width: 100%;
 }
+/* .navbar-nav-right {
+  margin-left: auto;
+} */
+
 
 .landing {
   position: relative;
-  background: url('./img/showcase.jpeg') no-repeat;
+  background: url('./img/showcase.jpeg') no-repeat ;
   background-size: cover;
   height: 100vh;
   margin-top: -24px;
   margin-bottom:-50px;
+  
 }
 .landing-inner {
   padding-top: 80px;
 }
 
 .dark-overly {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   top: 0;
   left: 0;
